bitsandbytes/bits/tests/ui/unknown_argument.rs
use bits::wire;

#[wire(bigendian)]
struct X {
    a: u8,
}

fn main() {}
